--- a/src/assets/scss/components/layout/chat.scss
+++ b/src/assets/scss/components/layout/chat.scss
@@ -1,8 +1,9 @@
 @import 'https://fonts.googleapis.com/css?family=Noto+Sans';
+
 $scrollbar-width: 5px;
 $chat-thread-bgd-color: rgba(25, 147, 147, 0.2);
 $chat-thread-msg-arrow-size: 10px;
-$chat-thread-avatar-size: 25px;
+$chat-thread-avatar-size: 30px;
 $chat-thread-offset: #{$chat-thread-avatar-size + 20px};
 $default-shadow-color: rgb(0, 0, 0);
 
@@ -38,13 +39,17 @@ body {
   position: fixed;
   bottom: 10px;
   right: 10px;
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   transform: translateY(70px);
   transition: all 250ms ease-out;
   border-radius: 50%;
   opacity: 0;
   @include fancy-background;
+
+  .fa-comments {
+    font-size: 18px;
+  }
 
   &.enter:hover {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -58,9 +63,9 @@ body {
   }
 
   &.expand {
-    width: 250px;
-    max-height: 400px;
-    height: 400px;
+    width: 450px;
+    max-height: 500px;
+    height: 500px;
     border-radius: 5px;
     cursor: auto;
     opacity: 1;
@@ -68,16 +73,17 @@ body {
 
   :focus {
     outline: 0;
-    box-shadow: 0 0 3pt 2pt rgba(#0EC879, 0.3);
+    box-shadow: 0 0 2pt 1pt rgba(#0EC879, 0.3);
   }
 
   button {
     background: transparent;
-    border: 0;
     color: white;
     text-transform: uppercase;
     border-radius: 3px;
     cursor: pointer;
+    letter-spacing: 1.4px;
+    border: 0;
   }
 
   .chat {
@@ -137,7 +143,7 @@ body {
         display: inline-block;
         padding: 14px;
         margin: 0 0 20px 0;
-        font: 12px/16px 'Noto Sans', sans-serif;
+        font: 14px/16px 'Noto Sans', sans-serif;
         border-radius: 10px;
         background-color: $chat-thread-bgd-color;
         word-wrap: break-word;
@@ -201,9 +207,16 @@ body {
     .footer {
       flex-shrink: 0;
       display: flex;
-      padding-top: 10px;
       max-height: 90px;
       background: transparent;
+      border-top: 1px solid #0ec87940;
+      padding-top: 5px;
+
+      button {
+        padding: 3px 14px;
+        letter-spacing: 1.4px;
+        border: 1px solid #0ec87940;
+      }
 
       .text-box {
         border-radius: 3px;
@@ -213,7 +226,9 @@ body {
         margin-right: 5px;
         color: #0EC879;
         overflow-y: auto;
-        padding: 2px 5px;
+        padding: 8px 5px;
+        font-size: 17px;
+
         @include fancy-scrollbar;
       }
     }
