--- a/src/assets/scss/components/layout/chat.scss
+++ b/src/assets/scss/components/layout/chat.scss
@@ -1,3 +1,143 @@
+body {
+  background: linear-gradient(253deg, #0cc898, #1797d2, #864fe1);
+  background-size: 300% 300%;
+  animation: Background 25s ease infinite;
+}
+
+@keyframes Background {
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
+  }
+}
+
+.full-screen {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-size: cover;
+  background: url(https://i.imgur.com/wCG2csZ.png) center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+h1 {
+  color: #fff;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 800;
+  font-size: 4em;
+  letter-spacing: -2px;
+  text-align: center;
+  text-shadow: 1px 2px 1px rgba(0, 0, 0, .6);
+}
+
+h2 {
+  color: #fff;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 800;
+  font-size: 2em;
+  letter-spacing: 0;
+  text-align: center;
+  text-shadow: 1px 2px 1px rgba(0, 0, 0, .6);
+  margin-top: 40px;
+}
+
+.chat-arrow {
+  width: 200px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  right: 0;
+  bottom: 60px;
+
+  span {
+    color: #fff;
+    font-size: 20px;
+    letter-spacing: 3px;
+    font-family: Open Sans, sans-serif;
+    text-decoration: none;
+    padding: 8px 12px;
+    float: left;
+    border-radius: 3px;
+    transition: .7s;
+    text-transform: uppercase;
+    z-index: 2;
+    font-weight: 900;
+  }
+
+  &-wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    .arrow {
+      opacity: 0;
+      position: absolute;
+      left: 43%;
+      top: 50%;
+
+      &:before,
+      &:after {
+        background: #fff;
+        content: '';
+        display: block;
+        height: 3px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 30px;
+      }
+
+      &:before {
+        transform: rotate(45deg) translateX(-23%);
+        transform-origin: top left;
+      }
+
+      &:after {
+        transform: rotate(-45deg) translateX(23%);
+        transform-origin: top right;
+      }
+
+      &-first {
+        animation: arrow-movement 2s ease-in-out infinite;
+      }
+
+      &-second {
+        animation: arrow-movement 2s 1s ease-in-out infinite;
+      }
+    }
+
+    @keyframes arrow-movement {
+      0% {
+        opacity: 0;
+        top: 45%;
+      }
+      70% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0;
+      }
+    }
+
+  }
+}
+
+
 @import 'https://fonts.googleapis.com/css?family=Noto+Sans';
 
 $scrollbar-width: 5px;
@@ -38,7 +178,7 @@ body {
   color: white;
   position: fixed;
   bottom: 10px;
-  right: 10px;
+  right: 70px;
   width: 60px;
   height: 60px;
   transform: translateY(70px);
