--- a/src/assets/scss/components/layout/chat.scss
+++ b/src/assets/scss/components/layout/chat.scss
@@ -1,19 +1,35 @@
-body {
-  background: linear-gradient(253deg, #0cc898, #1797d2, #864fe1);
-  background-size: 300% 300%;
-  animation: Background 25s ease infinite;
+@import 'https://fonts.googleapis.com/css?family=Noto+Sans';
+
+$scrollbar-width: 5px;
+$chat-thread-bgd-color: rgba(25, 147, 147, 0.2);
+$chat-thread-msg-arrow-size: 10px;
+$chat-thread-avatar-size: 30px;
+$chat-thread-offset: #{$chat-thread-avatar-size + 20px};
+$default-shadow-color: rgb(0, 0, 0);
+
+@mixin fancy-background() {
+  background: linear-gradient(-45deg, #183850 0, #183850 25%, #192C46 50%, #22254C 75%, #22254C 100%) no-repeat fixed;
 }
 
-@keyframes Background {
-  0% {
-    background-position: 0% 50%
+@mixin fancy-scrollbar() {
+  &::-webkit-scrollbar {
+    width: $scrollbar-width;
   }
-  50% {
-    background-position: 100% 50%
+  &::-webkit-scrollbar-track {
+    border-radius: $scrollbar-width;
+    background-color: rgba(25, 147, 147, 0.1);
   }
-  100% {
-    background-position: 0% 50%
+  &::-webkit-scrollbar-thumb {
+    border-radius: $scrollbar-width;
+    background-color: $chat-thread-bgd-color;
   }
+}
+
+body {
+  background-size: 300% 300%;
+  animation: Background 25s ease infinite;
+  background: skyblue;
+  font: 12px/16px 'Noto Sans', sans-serif;
 }
 
 .full-screen {
@@ -120,54 +136,7 @@ h2 {
         animation: arrow-movement 2s 1s ease-in-out infinite;
       }
     }
-
-    @keyframes arrow-movement {
-      0% {
-        opacity: 0;
-        top: 45%;
-      }
-      70% {
-        opacity: 1;
-      }
-      100% {
-        opacity: 0;
-      }
-    }
-
   }
-}
-
-
-@import 'https://fonts.googleapis.com/css?family=Noto+Sans';
-
-$scrollbar-width: 5px;
-$chat-thread-bgd-color: rgba(25, 147, 147, 0.2);
-$chat-thread-msg-arrow-size: 10px;
-$chat-thread-avatar-size: 30px;
-$chat-thread-offset: #{$chat-thread-avatar-size + 20px};
-$default-shadow-color: rgb(0, 0, 0);
-
-@mixin fancy-background() {
-  background: linear-gradient(-45deg, #183850 0, #183850 25%, #192C46 50%, #22254C 75%, #22254C 100%) no-repeat fixed;
-}
-
-@mixin fancy-scrollbar() {
-  &::-webkit-scrollbar {
-    width: $scrollbar-width;
-  }
-  &::-webkit-scrollbar-track {
-    border-radius: $scrollbar-width;
-    background-color: rgba(25, 147, 147, 0.1);
-  }
-  &::-webkit-scrollbar-thumb {
-    border-radius: $scrollbar-width;
-    background-color: $chat-thread-bgd-color;
-  }
-}
-
-body {
-  background: skyblue;
-  font: 12px/16px 'Noto Sans', sans-serif;
 }
 
 .floating-chat {
@@ -185,6 +154,7 @@ body {
   transition: all 250ms ease-out;
   border-radius: 50%;
   opacity: 0;
+  text-align: left;
   @include fancy-background;
 
   .fa-comments {
@@ -361,17 +331,42 @@ body {
       .text-box {
         border-radius: 3px;
         background: $chat-thread-bgd-color;
-        min-height: 100%;
+        min-height: 32px;
         width: 100%;
         margin-right: 5px;
         color: #0EC879;
         overflow-y: auto;
-        padding: 8px 5px;
+        padding: 0 5px;
         font-size: 17px;
-
+border: none;
         @include fancy-scrollbar;
       }
     }
+  }
+}
+
+@keyframes Background {
+  0% {
+    background-position: 0 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0 50%
+  }
+}
+
+@keyframes arrow-movement {
+  0% {
+    opacity: 0;
+    top: 45%;
+  }
+  70% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
 
